--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <title>Document</title>
@@ -12,6 +13,22 @@
     <div id="app">
         
     </div>
+
+    <script type="text/babel">
+        class App extends React.Component {
+            render(){
+                return (
+                    <div className="app-content">
+                        <h1>Hey, Ninjas</h1>
+                        <h3>{Math.random() * 10 }</h3>
+                    </div>
+                )
+            }
+        }
+
+        //Renders the element to the DOM
+        ReactDOM.render(<App />,  document.getElementById('app'));
+    </script>
     
 </body>
 </html>
