--- a/index.html
+++ b/index.html
@@ -20,13 +20,18 @@
                 name: 'Ryu',
                 age: 35,
             }
-            handleClick(e){
+            handleClick = (e) =>{
                 //console.log("EVENT ", e.target);
                 console.log(this.state);
+
+                this.setState({
+                    name: "Joel",
+
+                });
             }
 
             handleMouseHover(e){
-                console.log(e.target);
+                console.log(e.target, e.pageX);
             }
             handleOnCopy(e){
 
